--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button{
+  background-color: black;
   color: white;
+  border-radius: 3px;
+  border-width: 0;
+  padding: 0.5rem 1rem;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+form,input{
+  font-size:inherit;
+
+}
+label{
+  color: gray;
+  display: block;
+  font-weight: 700;
+  margin:  0 0 0.5rem;
+  text-transform: uppercase;
+}
+input{
+  border-color: black;
+  border-style: solid;
+  font-weight: 700;
+  padding: 0.5rem;
+  margin: 0 0 1rem;
+}
+modal{
+background-color: white;
+border-radius: 3px;
+top: 2rem;
+left: 50%;
+transform: translate(-50%, 0);
+padding: 2rem;
+position: fixed;
+max-width: 90vw;
+z-index:2;
+
+}
+.modal--overlay {
+  background-color: rgba(0,-0,-0,-0.5);
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 2; 
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
